--- a/css/style.scss
+++ b/css/style.scss
@@ -1,7 +1,8 @@
-@use '_button';
+@import '_button';
 // @import for variables only
 @import '_variables';
 @import '_mq_small';
+@import '_list';
 
 @mixin darkGreen($font-green:green) {
     background-color: gold;
