--- a/css/style.scss
+++ b/css/style.scss
@@ -1,8 +1,8 @@
 @import '_button';
-// @import for variables only
 @import '_variables';
 @import '_mq_small';
 @import '_list';
+@import '../node_modules/bootstrap/scss/bootstrap.scss';
 
 @mixin darkGreen($font-green:green) {
     background-color: gold;
@@ -16,7 +16,7 @@ h1 {
 
 .second {
     background-color: purple;
-    margin: 10px;
+    margin: 15px;
     width: 300px;
     height: 300px;
 }
